# fiction_to_script

./: .dockerignore  .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/agents/: nodes.py  script_profiles.py  state.py
backend/app/api/: auth.py  files.py  generation.py  health.py  imports.py  projects.py
backend/app/auth/: dependencies.py  security.py
backend/app/config/: settings.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  chapter.py  chapter_summary.py  generation_task.py  project.py  script_document.py  source_document.py  stored_file.py  story_character.py  story_event.py  story_location.py  user.py
backend/app/schemas/: __init__.py  auth.py  file.py  generation.py  imports.py  project.py
backend/app/services/: bailian_client.py  chapters.py  partial_regeneration.py  script_generation.py  script_validation.py
backend/app/storage/: __init__.py  local.py
backend/tests/: test_agent_nodes.py  test_auth.py  test_bailian_client.py  test_db.py  test_files.py  test_generation.py  test_imports.py  test_projects.py  test_script_validation.py
docs/: README.md  requirements.md  script-yaml-schema.md
docs/exec-plans/active/: mvp-development-plan.md
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx  styles.css
frontend/src/api/: auth.js  client.js  generation.js  imports.js  projects.js
frontend/src/stores/: auth.jsx
storage/: .gitignore
(+9 files in other folders)
