[project]
name = "fiction-to-script-backend"
version = "0.1.0"
description = "FastAPI backend for the AI novel-to-script MVP."
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.124.0,<0.125.0",
    "pydantic-settings>=2.12.0,<3.0.0",
    "sqlalchemy>=2.0.45,<3.0.0",
]

[dependency-groups]
dev = []

[tool.uv]
package = false
