[project]
name = "fiction-to-script-backend"
version = "0.1.0"
description = "FastAPI backend for the AI novel-to-script MVP."
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=3.2.0,<4.0.0",
    "fastapi[standard]>=0.124.0,<0.125.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "pydantic-settings>=2.12.0,<3.0.0",
    "pyjwt>=2.10.1,<3.0.0",
    "python-docx>=1.1.2,<2.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "sqlalchemy>=2.0.45,<3.0.0",
]

[dependency-groups]
dev = []

[tool.uv]
package = false
